--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
+    "openai": "^4.57.3",
     "pg": "^8.12.0",
     "prettier": "^3.3.3"
   }
